src/glx/glx_error.h
@@ -31,9 +31,17 @@
 #include <X11/Xlib.h>
 #include <xcb/xcb.h>
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 void __glXSendError(Display * dpy, int_fast8_t errorCode,
 		    uint_fast32_t resourceID, uint_fast16_t minorCode,
 		    bool coreX11error);
 
 _X_HIDDEN void __glXSendErrorForXcb(Display * dpy,
 				    const xcb_generic_error_t *err);
+
+#ifdef __cplusplus
+}
+#endif
