src/glx/tests/query_renderer_implementation_unittest.cpp
@@ -26,13 +26,11 @@
 
 #if defined(GLX_DIRECT_RENDERING) && !defined(GLX_USE_APPLEGL)
 
-extern "C" {
 #include "glxclient.h"
 #include "glx_error.h"
 #include "dri2.h"
 #include "dri_interface.h"
 #include "dri2_priv.h"
-}
 
 struct attribute_test_vector {
    const char *glx_string;
